# swing-trading-usa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily.yml  earnings-backfill.yml  intraday.yml
config/: settings.yaml  sp500.csv  sp500_changes.csv  thematic.yaml
dashboard/: _auth.py  _charts.py  _data.py  app.py  requirements.txt
dashboard/.streamlit/: config.toml  secrets.toml.example
dashboard/pages/: 1_Positions.py  2_Signals_and_Outcomes.py  3_Charts.py  4_News.py  5_Execution_Quality.py
data/: earnings_backfill_state.csv  earnings_dates.csv
docs/: audit-2026-06-10.md  strategy-review-2026-06-10.md  strategy-uplift-2026-06-11.md
docs/validation/: README.md  runs.jsonl  sweep-2017-01-01-2019-12-31.md  trials.jsonl  window-2015-01-01-2016-12-31.md  window-2020-01-01-2021-12-31.md  window-combo-brake-2013-14.md  window-combo-brake-2017-19.md  window-combo-brake-2025-26.md  window-combo-brake-tiingo-2017-19.md  window-combo-brake-tiingo-2025-26.md
research/: 01_technical.md  02_news_sentiment.md  03_events.md  04_macro_geopolitical.md  05_themes_cycles.md  06_smart_money.md  07_regime_breadth.md  08_risk_sizing.md  09_data_sources.md  10_scoring_engine.md  11_backtesting.md  12_architecture.md
scripts/: backfill_earnings.py  diagnose_pipeline.py  diagnose_trades.py  experiment_broad_universe.py  recover_delisted.py  refill_cache.py  run_validation_window.py  sweep_sensitivity.py  validation_common.py  verify_live_parity.py
swing_signals/: __init__.py  calendar_gate.py  cli.py  config_loader.py  context.py  exits.py  main.py
swing_signals/ai/: __init__.py  brief.py  client.py  news_scoring.py  prompts.py
swing_signals/backtest/: __init__.py  config.py  costs.py  metrics.py  overfitting.py  report.py  runner.py  trials.py  walk_forward.py
swing_signals/broker/: __init__.py  alpaca_client.py  base.py  entries.py  gates.py  manage.py  run.py  sizing.py
swing_signals/data/: __init__.py  alpaca_provider.py  base.py  cache.py  earnings.py  earnings_history.py  fred_provider.py  loader.py  market.py  massive_provider.py  normalize.py  quality.py  retry.py  stooq_provider.py  tiingo_provider.py  yfinance_provider.py
swing_signals/factors/: __init__.py  base.py  f01_technical.py  f02_news_sentiment.py  f08_momentum.py  f09_setup.py  indicators.py  registry.py
swing_signals/market/: __init__.py  base.py  f04_macro.py  f07_regime.py
swing_signals/news/: __init__.py  aggregate.py  alphavantage_news.py  base.py  discovery.py  finnhub_news.py  sec_edgar.py
swing_signals/output/: __init__.py  base.py  dispatch.py  email_smtp.py  healthcheck.py  report.py  telegram.py
swing_signals/persistence/: __init__.py  db.py  models.py  repository.py
swing_signals/risk/: __init__.py  base.py  vol_sizing.py
swing_signals/scoring/: __init__.py  budget.py  engine.py  levels.py
swing_signals/tracking/: __init__.py  outcomes.py  reconcile.py
swing_signals/universe/: __init__.py  membership.py  screen.py  thematic.py
tests/: conftest.py  test_ai.py  test_alerts.py  test_alpaca_provider.py  test_backtest_costs.py  test_backtest_metrics.py  test_backtest_runner.py  test_broker_bracket.py  test_broker_client.py  test_broker_entries.py  test_broker_gates.py  test_broker_manage.py  test_broker_sizing.py  test_budget.py  test_cache_retry.py  test_calendar.py  test_composite.py  test_config.py  test_costs_stress.py  test_dashboard_app.py  test_dashboard_data.py  test_data_coverage.py  test_drawdown_brake.py  test_earnings_history.py  test_engine.py  test_exits.py  test_factor_momentum.py  test_factor_news.py  test_factor_setup.py  test_factor_technical.py  test_healthcheck.py  test_indicators.py  test_integration.py  test_levels.py  test_loader.py  test_macro.py  test_market.py  test_massive_provider.py  test_membership.py  test_migration.py  (+18 more)
