[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swing-signals"
version = "0.1.0"
description = "Signal-only swing-trading signal generator for US stocks (decision support; never executes trades)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - personal use" }

# Base deps are intentionally small so the scaffold installs fast and reliably.
# Heavier / stage-specific deps live in optional extras below and are added as
# each build stage lands.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Stage 2 — price/market data layer (free-first sources)
data = [
    "yfinance>=0.2.40",
    "fredapi>=0.5",              # macro + VIX
    "pandas-market-calendars>=4.4",
    "requests>=2.31",            # also drives the Stooq CSV fallback
    "tenacity>=8.2",
    "pyarrow>=15.0",             # parquet cache
]
# Stage 3 — "soft" data for news/events/insider factors
softdata = [
    "finnhub-python>=2.4",       # news, earnings calendar, insider
    "edgartools>=3.0",           # SEC Form 4 / 8-K / filings
]
# (Technical indicators are computed locally in factors/indicators.py — no
#  pandas-ta/TA-Lib dependency, which also avoids their NumPy-2/py3.14 breakage.)
# Persistence
db = ["sqlalchemy>=2.0"]
# Stage 6 — alerting
alerts = ["python-telegram-bot>=21.0"]
# Stage 5 — backtest/validation
backtest = ["vectorbt>=0.26", "alphalens-reloaded>=0.4"]
# Developer tooling
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
swing-signals = "swing_signals.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["swing_signals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit live external APIs (deselect with -m 'not network')",
]
addopts = "-m 'not network'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
